--- a/QB_Customers_Test/QB_Customers_Test.csproj
+++ b/QB_Customers_Test/QB_Customers_Test.csproj
@@ -7,7 +7,20 @@
 
     <IsPackable>false</IsPackable>
     <IsTestProject>true</IsTestProject>
+    <Platforms>AnyCPU;x86</Platforms>
   </PropertyGroup>
+
+  <ItemGroup>
+    <COMReference Include="QBFC16Lib">
+      <WrapperTool>tlbimp</WrapperTool>
+      <VersionMinor>0</VersionMinor>
+      <VersionMajor>1</VersionMajor>
+      <Guid>1d05360b-2536-4277-83fd-bdf639e20f9e</Guid>
+      <Lcid>0</Lcid>
+      <Isolated>false</Isolated>
+      <EmbedInteropTypes>true</EmbedInteropTypes>
+    </COMReference>
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
@@ -17,6 +30,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\QB_Customers_CLI\QB_Customers_CLI.csproj" />
     <ProjectReference Include="..\QB_Customers_Lib\QB_Customers_Lib.csproj" />
   </ItemGroup>
 
